test/preprocessor/fail/define_defined.osl
#define defined(x) 0
shader test() {}
